updated performance and readme added docker and cd